--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
     <!-- Start Main Top -->
-    <div class="main-top">
+    <!-- <div class="main-top">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -78,73 +78,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Main Top -->
 
     <!-- Start Main Top -->
-    <header class="main-header">
-        <!-- Start Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-default bootsnav">
-            <div class="container">
-                <!-- Start Header Navigation -->
-                <div class="navbar-header">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa fa-bars"></i>
-                </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" width="120" height="70" class="logo" alt=""></a>
-                </div>
-                <!-- End Header Navigation -->
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="navbar-menu">
-                    <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-
-
-                        <li class="nav-item"><a class="nav-link" href="#">Our Service</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-
-                <!-- Start Atribute Navigation -->
-                <div class="attr-nav">
-                    <ul>
-                        <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
-                        <li class="side-menu">
-                            <a href="#">
-                                <i class="fa fa-shopping-bag"></i>
-                                <span class="badge">0</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- End Atribute Navigation -->
-            </div>
-            <!-- Start Side Menu -->
-            <div class="side">
-                <a href="#" class="close-side"><i class="fa fa-times"></i></a>
-                <li class="cart-box">
-                    <ul class="cart-list">
-                        <li>
-
-                        </li>
-                        <li>
-
-                        </li>
-                        <li>
-
-                        </li>
-                        <li class="total">
-
-                        </li>
-                    </ul>
-                </li>
-            </div>
-            <!-- End Side Menu -->
-        </nav>
-        <!-- End Navigation -->
-    </header>
     <!-- End Main Top -->
 
     <!-- Start Top Search -->
@@ -169,7 +106,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Book Hub</strong></h1>
                             <p class="m-b-40">When it comes to searching for books, there is only one place to turn to – Book Hub.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <!-- <p><a class="btn hvr-hover" href="#">Shop New</a></p> -->
                         </div>
                     </div>
                 </div>
@@ -181,28 +118,28 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Book Hub</strong></h1>
                             <p class="m-b-40">When it comes to searching for books, there is only one place to turn to – Book Hub.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <!-- <p><a class="btn hvr-hover" href="#">Shop New</a></p> -->
                         </div>
                     </div>
                 </div>
             </li>
             <li class="text-right">
-                <img src="images/img1.webp" alt="">
+                <img src="images/img1.jpg" alt="">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Book Hub</strong></h1>
                             <p class="m-b-40">When it comes to searching for books, there is only one place to turn to – Book Hub.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <!-- <p><a class="btn hvr-hover" href="#">Shop New</a></p> -->
                         </div>
                     </div>
                 </div>
             </li>
         </ul>
-        <div class="slides-navigation">
+        <!-- <div class="slides-navigation">
             <a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
             <a href="#" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-        </div>
+        </div> -->
     </div>
     <!-- End Slider -->
 
@@ -212,31 +149,31 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/action and advencture.jpg" width="352px" length="352px" alt="" />
+                        <img class="img-fluid" src="images/charactor1.jpg" width="352px" length="352px" alt="" />
                         <a class="btn hvr-hover" href="#">Action and Adventure</a>
                     </div>
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/Classics.png" alt="" />
+                        <img class="img-fluid" src="images/charactor2.jpg" alt="" />
                         <a class="btn hvr-hover" href="#">Classics</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/Historical_fiction.jpg" alt="" />
+                        <img class="img-fluid" src="images/charactor3.png" alt="" />
                         <a class="btn hvr-hover" href="#">Historical Fiction</a>
                     </div>
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/Litrature.jpg" alt="" />
+                        <img class="img-fluid" src="images/charactor4.png" alt="" />
                         <a class="btn hvr-hover" href="#">Literary Fiction</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/Science_fictiom.jpg" alt="" />
+                        <img class="img-fluid" src="images/charactor5.png" alt="" />
                         <a class="btn hvr-hover" href="#">Science Fiction</a>
                     </div>
                     <div class="shop-cat-box">
-                        <img class="img-fluid" src="images/Biography.jpg" alt="" />
+                        <img class="img-fluid" src="images/charactor6.png" alt="" />
                         <a class="btn hvr-hover" href="#">Biography</a>
                     </div>
                 </div>
@@ -273,9 +210,9 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <!-- <p class="sale">Sale</p> -->
                             </div>
-                            <img src="images/Zero-To-One-by-Peter-Thiel-400x600.jpg" class="img-fluid" alt="Image">
+                            <img src="images/desc4.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
@@ -298,7 +235,7 @@
                             <div class="type-lb">
                                 <p class="new">New</p>
                             </div>
-                            <img src="images/Alchemist.png" class="img-fluid" alt="Image">
+                            <img src="images/desc1.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
@@ -319,9 +256,9 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <!-- <p class="sale">Sale</p> -->
                             </div>
-                            <img src="images/The_Intelligent_invester.jpg" class="img-fluid" alt="Image">
+                            <img src="images/desc2.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
@@ -342,9 +279,9 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <!-- <p class="sale">Sale</p> -->
                             </div>
-                            <img src="images/sherlock.jpg" class="img-fluid" alt="Image">
+                            <img src="images/desc3.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
@@ -380,7 +317,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-4">
                     <div class="blog-box">
                         <div class="blog-img">
-                            <img class="img-fluid" src="images/bo.webp" alt="" />
+                            <img class="img-fluid" src="images/desc4.jpg" alt="" />
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
@@ -391,18 +328,18 @@
                                     and the raid that killed Osama bin Laden
                                 </p>
                             </div>
-                            <ul class="option-blog">
+                            <!-- <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Views"><i class="fas fa-eye"></i></a></li>
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Comments"><i class="far fa-comments"></i></a></li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-4">
                     <div class="blog-box">
                         <div class="blog-img">
-                            <img class="img-fluid" src="images/three.jpeg" alt="" />
+                            <img class="img-fluid" src="images/desc1.jpg" alt="" />
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
@@ -413,18 +350,18 @@
                                     otherwise known as firing people in less corporate terms.
                                 </p>
                             </div>
-                            <ul class="option-blog">
+                            <!-- <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Views"><i class="fas fa-eye"></i></a></li>
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Comments"><i class="far fa-comments"></i></a></li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-4">
                     <div class="blog-box">
                         <div class="blog-img">
-                            <img class="img-fluid" src="images/ro.webp" alt="" />
+                            <img class="img-fluid" src="images/desc2.jpg" alt="" />
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
@@ -435,11 +372,11 @@
                                 </p>
 
                             </div>
-                            <ul class="option-blog">
+                            <!-- <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Views"><i class="fas fa-eye"></i></a></li>
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Comments"><i class="far fa-comments"></i></a></li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                 </div>
@@ -454,7 +391,7 @@
         <div class="main-instagram owl-carousel owl-theme">
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-01.jpg" alt="" />
+                    <img src="images/desc1.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -462,7 +399,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-02.jpg" alt="" />
+                    <img src="images/desc2.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -470,7 +407,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-03.jpg" alt="" />
+                    <img src="images/desc3.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -478,7 +415,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-04.jpg" alt="" />
+                    <img src="images/desc4.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -486,7 +423,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-05.jpg" alt="" />
+                    <img src="images/desc1.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -494,7 +431,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-06.jpg" alt="" />
+                    <img src="images/desc2.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -502,7 +439,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-07.jpg" alt="" />
+                    <img src="images/desc3.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -510,7 +447,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-08.jpg" alt="" />
+                    <img src="images/desc4.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -518,7 +455,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-09.jpg" alt="" />
+                    <img src="images/desc1.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -526,7 +463,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src="images/instagram-img-05.jpg" alt="" />
+                    <img src="images/desc2.jpg" alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
